Fix URL paths and last bits to remove the OU feature
